--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,75 @@
+@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Delius&display=swap");
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@theme {
+  --color-sand: #f7eedd;
+  --color-blue1: #ace2e1;
+  --color-blue2: #41c9e2;
+  --color-blue3: #008dda;
+  --font-title: "Pacifico", fantasy;
+  --font-main: "Delius", cursive;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer components {
+  .header {
+    @apply flex flex-col lg:flex-row justify-center lg:justify-around gap-8 lg:gap-0  items-center bg-gradient-to-br from-blue2 to-blue1 text-sand p-12;
+  }
+  .btn {
+    @apply bg-sand p-2 text-sm border border-black hover:border-sand rounded-lg hover:bg-blue3 text-black text-center hover:text-sand transition-all duration-200 cursor-pointer;
+  }
+  .input {
+    @apply placeholder:text-black bg-sand p-1.5 rounded focus:outline-blue3;
+  }
+  .animateLetter {
+    @apply font-title text-7xl inline-block text-blue2 transform translate-y-0;
   }
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  @apply flex flex-col  text-sand font-main bg-fixed bg-no-repeat bg-cover min-h-screen w-full bg-[url(/images/fond.jpg)];
+}
+
+/* Lettres animées de bienvenue */
+.animateLetter {
+  @apply font-title text-7xl inline-block text-blue2 transform translate-y-0;
+  animation: wave 1s ease-in-out infinite;
+}
+
+.animateLetter:nth-child(1) {
+  animation-delay: 0s;
+}
+.animateLetter:nth-child(2) {
+  animation-delay: 0.1s;
+}
+.animateLetter:nth-child(3) {
+  animation-delay: 0.2s;
+}
+.animateLetter:nth-child(4) {
+  animation-delay: 0.3s;
+}
+.animateLetter:nth-child(5) {
+  animation-delay: 0.4s;
+}
+.animateLetter:nth-child(6) {
+  animation-delay: 0.5s;
+}
+.animateLetter:nth-child(7) {
+  animation-delay: 0.6s;
+}
+.animateLetter:nth-child(8) {
+  animation-delay: 0.7s;
+}
+.animateLetter:nth-child(9) {
+  animation-delay: 0.8s;
+}
+
+@keyframes wave {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-15px);
+  }
 }
