--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,11 +12,11 @@
 }
 
 @layer components {
-  .header {
-    @apply flex flex-col lg:flex-row justify-center lg:justify-around gap-8 lg:gap-0  items-center bg-gradient-to-br from-blue2 to-blue1 text-sand p-12;
-  }
   .btn {
     @apply bg-sand p-2 text-sm border border-black hover:border-sand rounded-lg hover:bg-blue3 text-black text-center hover:text-sand transition-all duration-200 cursor-pointer;
+  }
+  .header {
+    @apply flex flex-col lg:flex-row justify-center lg:justify-around gap-8 lg:gap-0  items-center bg-gradient-to-br from-blue3 to-blue1 text-sand p-12;
   }
   .input {
     @apply placeholder:text-black bg-sand p-1.5 rounded focus:outline-blue3;
@@ -24,18 +24,28 @@
   .animateLetter {
     @apply font-title text-7xl inline-block text-blue2 transform translate-y-0;
   }
+  .footerLink {
+    @apply hover:text-blue3 hover:underline transition-all duration-200;
+  }
 }
 
 body {
   @apply flex flex-col  text-sand font-main bg-fixed bg-no-repeat bg-cover min-h-screen w-full bg-[url(/images/fond.jpg)];
 }
+@utility custom-gradient {
+  @apply bg-gradient-to-br from-blue3 to-blue1;
+}
+
+@utility shadowcustom {
+  box-shadow: 0 -10px 15px -3px rgba(0, 0, 0, 0.4),
+    0 -4px 6px -2px rgba(0, 0, 0, 0.05);
+}
 
 /* Lettres animées de bienvenue */
 .animateLetter {
-  @apply font-title text-7xl inline-block text-blue2 transform translate-y-0;
+  @apply font-title text-5xl md:text-7xl -mt-20 md:mt-0 text-blue2;
   animation: wave 1s ease-in-out infinite;
 }
-
 .animateLetter:nth-child(1) {
   animation-delay: 0s;
 }
