--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,9 @@
   --font-title: "Pacifico", fantasy;
   --font-main: "Delius", cursive;
 }
+* {
+  box-sizing: border-box;
+}
 
 @layer components {
   .btn {
@@ -36,7 +39,7 @@
     @apply font-title text-center text-2xl md:text-3xl text-gray-900 underline w-[300px] md:w-[500px] mx-auto mt-10 mb-15 p-2.5 shadow-[3px_3px_5px_3px_rgba(0,141,218,0.75)] rounded-full;
   }
   h3 {
-    @apply text-sand  font-semibold;
+    @apply text-sand font-semibold underline text-lg  whitespace-nowrap;
   }
 }
 
@@ -61,7 +64,7 @@ body {
   @apply text-red-500 text-sm font-semibold mt-1;
 }
 @utility scroll-container {
-  @apply flex flex-row justify-start items-center custom-gradient-dark border-4 border-blue3 rounded-4xl mb-15 mx-auto overflow-hidden w-full md:w-[400px] max-w-full py-2;
+  @apply flex flex-row justify-start items-center  custom-gradient-dark border-4 border-blue3 rounded-4xl mb-15 mx-auto overflow-hidden w-full md:w-[400px] max-w-full h-[50px] py-2;
 }
 @utility scroll {
   @apply inline-block will-change-transform text-sand;
