Amélioration design titre et section. Feature page Infos avec pagination. Modification architecture avec [slug].

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,11 +35,14 @@
   .footerLink {
     @apply hover:text-blue3 hover:underline transition-all duration-200;
   }
-  h2 {
-    @apply font-title text-center text-2xl md:text-3xl text-gray-900 underline w-[300px] md:w-[500px] mx-auto mt-10 mb-15 p-2.5 shadow-[3px_3px_5px_3px_rgba(0,141,218,0.75)] rounded-full;
+  h1 {
+    @apply flex justify-center items-center mb-15 bg-sand p-5 text-3xl font-title rounded-full border md:max-w-1/2 mx-auto border-blue3 shadow-[3px_3px_5px_3px_rgba(0,141,218,0.75)];
   }
-  h3 {
+  h2 {
     @apply text-sand font-semibold underline text-lg  whitespace-nowrap;
+  }
+  .section {
+    @apply border px-5 md:px-10 py-10 bg-sand rounded-xl border-blue3 shadow-lg;
   }
 }
 
@@ -64,7 +67,7 @@ body {
   @apply text-red-500 text-sm font-semibold mt-1;
 }
 @utility scroll-container {
-  @apply flex flex-row justify-start items-center  custom-gradient-dark border-4 border-blue3 rounded-4xl mb-15 mx-auto overflow-hidden w-full md:w-[400px] max-w-full h-[50px] py-2;
+  @apply flex flex-row justify-start items-center  custom-gradient-dark border-4 border-blue3 rounded-4xl mt-5 mb-15 mx-auto overflow-hidden w-full md:w-[400px] max-w-full h-[50px] py-2;
 }
 @utility scroll {
   @apply inline-block will-change-transform text-sand;
