--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,7 @@
     @apply bg-blue3 p-3 text-sand  border border-blue2   hover:border-sand rounded-lg hover:bg-blue3/80  text-center  transition-all duration-200 cursor-pointer disabled:cursor-default disabled:opacity-40;
   }
   header {
-    @apply flex flex-col lg:flex-row justify-center lg:justify-around gap-8 lg:gap-0  items-center bg-gradient-to-br from-blue3 to-blue1 text-sand p-12;
+    @apply flex flex-col md:flex-row justify-center lg:justify-around gap-4 md:gap-8 lg:gap-0 items-center bg-gradient-to-br from-blue3 to-blue1 text-sand p-5 md:p-14 relative;
   }
   .input {
     @apply w-full max-w-[300px] bg-sand border border-blue2 text-black placeholder:text-gray-500 rounded-md px-3 py-2 mb-3 focus:outline-2 focus:outline-blue3;
@@ -37,10 +37,10 @@
     @apply hover:text-blue3 hover:underline transition-all duration-200;
   }
   h1 {
-    @apply flex justify-center items-center text-center mb-15 bg-sand p-5 text-3xl font-title rounded-full border md:max-w-1/2 mx-auto border-blue3 shadow-[3px_3px_5px_3px_rgba(0,141,218,0.75)];
+    @apply flex justify-center items-center text-center mb-8 md:mb-15 bg-sand p-5 text-lg md:text-xl font-title rounded-full border md:max-w-1/2 mx-auto border-blue3 shadow-[3px_3px_5px_3px_rgba(0,141,218,0.75)];
   }
   h2 {
-    @apply text-sand font-semibold underline text-lg  whitespace-nowrap;
+    @apply text-sand font-semibold underline text-base md:text-lg  whitespace-nowrap;
   }
   .section {
     @apply border px-5 md:px-10 py-10 bg-sand rounded-xl border-blue3 shadow-lg;
@@ -80,7 +80,7 @@ body {
 }
 /* Lettres animées de bienvenue */
 .animateLetter {
-  @apply font-title text-5xl md:text-7xl -mt-20 md:mt-0 text-blue2;
+  @apply font-title text-4xl sm:text-5xl md:text-6xl  text-blue2;
   animation: wave 1s ease-in-out infinite;
 }
 .animateLetter:nth-child(1) {
