--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,11 +61,12 @@ body {
 }
 
 @utility shadowcustom {
-  box-shadow: 0 -10px 15px -3px rgba(0, 0, 0, 0.4),
+  box-shadow:
+    0 -10px 15px -3px rgba(0, 0, 0, 0.4),
     0 -4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 @utility formError {
-  @apply text-red-500 text-sm font-semibold mt-1;
+  @apply text-red-500 text-sm font-semibold mt-1 text-center;
 }
 @utility scroll-container {
   @apply flex flex-row justify-start items-center  custom-gradient-dark border-4 border-blue3 rounded-4xl mt-5 mb-15 mx-auto overflow-hidden w-full md:w-[400px] max-w-full h-[50px] py-2;
