--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,7 +46,7 @@
     @apply hover:text-blue-700 hover:underline transition-all duration-200;
   }
   h1 {
-    @apply flex justify-center items-center text-center mb-8 md:mb-15 bg-sand p-5 text-lg md:text-xl font-title rounded-full border md:max-w-1/2 mx-auto border-blue3 shadow-[3px_3px_5px_3px_rgba(0,141,218,0.75)];
+    @apply flex justify-center items-center text-center mb-8 md:mb-15 bg-sand p-5 text-lg md:text-2xl font-title rounded-full border md:max-w-1/2 mx-auto border-blue3 shadow-[3px_3px_5px_3px_rgba(0,141,218,0.75)];
   }
   h2 {
     @apply text-sand font-semibold underline text-base md:text-lg  whitespace-nowrap;
