--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,9 +43,11 @@
   .section {
     @apply border px-5 md:px-10 py-10 bg-sand rounded-xl border-blue3 shadow-lg;
   }
-
   .link {
     @apply text-blue-800 hover:text-blue3 hover:underline duration-200;
+  }
+  .skeletonCard {
+    @apply custom-gradient-light w-[95%] md:w-[80%] lg:w-[70%] py-5 md:py-15 px-1 md:px-16 min-h-[80vh] mx-auto my-10 rounded-2xl border-2 border-blue3 shadow-lg shadow-blue3/30;
   }
 }
 
